# readwise-chat

./: README.md  pyproject.toml
src/readwise_chat/: models.py  server.py
